# proto-plugin

./: Cargo.toml  protoc-gen-cyber.bat  student.csv
proto/: student.pb.cc  student.pb.h  student.proto
src/: error.rs  lib.rs  main.rs
src/process/: generator.rs  generator_service.rs  mod.rs  options.rs  processor.rs  validator.rs
src/process/template/: constants.rs  field.rs  header.rs  mod.rs  source.rs  validation.rs
src/reader/: mod.rs  request.rs  template.rs
src/writer/: mod.rs
templates/: csv_reader.cc.template  csv_reader.h.template  field_read.template  field_validation.template  source.template  validation.template  validation_not_null.template  validation_range_string.template
templates/validation/: gt.template  gte.template  lt.template  lte.template  range_int.template
