[package]
name = "protoc-gen-cyber"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "protoc-gen-cyber"
path = "src/main.rs"

[lib]
name = "protoc_gen_cyber"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
handlebars = "4.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
protoc-gen-prost = "0.3.1"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = "0.9"
protobuf = "3.7.2"
